# virtual-ward-omop-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_achilles.R  run_dqd.R  test_validator.py
examples/: basic_config.yaml  concepts.csv
tests/: test_validation_system.py
virtual_ward_omop_generator/: __init__.py  cli.py  exceptions.py  logging_config.py  utils.py
virtual_ward_omop_generator/config/: __init__.py  manager.py
virtual_ward_omop_generator/generators/: __init__.py  episodes.py  interventions.py  mortality.py  population.py  signals.py  visits.py
virtual_ward_omop_generator/models/: __init__.py  base.py  omop.py
virtual_ward_omop_generator/output/: OMOPCDM_duckdb_5.4_ddl.sql  OMOPCDM_duckdb_5.4_indices.sql  __init__.py  duckdb_writer.py
virtual_ward_omop_generator/utils/: __init__.py  temporal_coordinator.py
virtual_ward_omop_generator/validation/: __init__.py  concept_validator.py  validator.py
